# finance-analyzer

./: .git_commit_msg.txt  .gitattributes  .gitignore  .mcp.example.json  AGENTS.md  CLAUDE.md  CNAME  README.md  SESSION_PLAN.md  TODO.md  WORKTREE_README.md  config.example.json  config.json  index.html  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start-loop.bat
.claude/: settings.json
dashboard/: app.py  auth.py  cf_access.py  control.py  export_static.py  house_blueprint.py  silver.py  system_status.py  trading_status.py
data/: accuracy_snapshots.jsonl  after-hours-research-progress.json  analyze_daily_ranges.py  auto-improve-progress.json  backtest_tsi_chop_mr.json  chronos_1h_significance.json  chronos_bolt_benchmark_firmup.json  chronos_server.py  consensus_replay_20260416.json  critical_errors.jsonl  crypto_data.py  crypto_loop.py  crypto_monitor.py  crypto_swing_config.py  crypto_swing_trader.py  crypto_warrant_refresh.py  daily_research_macro.json  daily_research_quant.json  daily_research_review.json  daily_research_signal_audit.json  daily_research_ticker_deep_dive.json  drift_regime_gate_backtest.json  extract_summary.py  fear_greed_streak.json  fin_fish_config.py  fish_engine.py  fishing_session_20260401.json  fishing_session_20260402.json  fishing_track_record.json  forecast_health.jsonl  forecast_predictions.jsonl  fx_rate_cache.json  gold_sell_debug.py  gold_sell_final.py  gold_sell_retry.py  headlines_latest.json  investigation_btc_2026-02-13.md  layer2_action.py  layer2_exec.py  layer2_invoke.py  (+47 more)
docs/: AVANZA_API.md  (+136 more)
(+1685 files in other folders)
