[project]
name = "portfolio-intelligence"
version = "1.0.0"
description = "Two-layer autonomous trading system with 29-signal analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "flask",
    "scikit-learn",
    "joblib",
]

[project.optional-dependencies]
training = [
    "torch",
    "transformers",
    "datasets",
    "peft",
]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require live GPU / network (deselect with '-k not integration')",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip strict (py3.10+)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["portfolio", "dashboard"]
